tenzir/tests/node/run/startup_errors.tql
// node: true
// error: true

pipeline::run {
  from env("INPUTS") + "/this-file-does-not-exist.json"
  discard
}, id="test-id"
